--- a/image-compression/code.ipynb
+++ b/image-compression/code.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "7KS33baR4pqL"
       },
@@ -26,7 +26,18 @@
         "id": "MyFO8Gut4pqP"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "%matplotlib inline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yogyYE3T7VGC"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
