--- a/image-compression/code.ipynb
+++ b/image-compression/code.ipynb
@@ -2,14 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "7KS33baR4pqL"
       },
       "outputs": [],
       "source": [
+        "%matplotlib inline\n",
+        "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
+        "import time\n",
+        "\n",
+        "from PIL import Image"
       ]
     },
     {
@@ -26,9 +30,7 @@
         "id": "MyFO8Gut4pqP"
       },
       "outputs": [],
-      "source": [
-        "%matplotlib inline"
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
